2008-01-18  Frederic Peters  <fpeters@0d.be>

	* jhbuild/moduleset.py: fixed skip option, broken by new build
	ordering method.

2008-01-18  Marko Anastasov  <marko.anastasov@gmail.com>

	* modulesets/gnome-2.22.modules: Added gtkmm-utils, with the
	savannah repo reference, and paperbox modules.

2008-01-17  Luca Ferretti  <elle.uca@libero.it>

	* modulesets/gnome-external-deps-2.22.modules: Update dbus to 1.1.4
	aka 1.2.0RC2: fix 100% memory/CPU consumption.
	
2008-01-17  Frederic Peters  <fpeters@0d.be>

	* jhbuild/errors.py, jhbuild/moduleset.py: rewrote build ordering to
	get dependency cycle detection (fatal for hard dependencies but quietly
	ignored for suggests and after).

2008-01-17  Frederic Peters  <fpeters@0d.be>

	* jhbuild/modtypes/gcjmodule.py, jhbuild/modtypes/gdbmodule.py,
	modulesets/gcj.modules, modulesets/moduleset.dtd: removed broken and
	outdated support for <gcjmodule> and <gdbmodule>.

2008-01-17  Frederic Peters  <fpeters@0d.be>

	* jhbuild/modtypes/__init__.py, jhbuild/modtypes/autotools.py,
	jhbuild/modtypes/cmake.py, jhbuild/modtypes/distutils.py,
	jhbuild/modtypes/linux.py, jhbuild/modtypes/mesa.py,
	jhbuild/modtypes/mozillamodule.py, jhbuild/modtypes/perl.py,
	jhbuild/modtypes/tarball.py, jhbuild/modtypes/testmodule.py,
	jhbuild/modtypes/waf.py, jhbuild/moduleset.py,
	modulesets/gnome-external-deps-2.22.modules: updated <suggests>
	semantic to add the module if it is available, moved poppler-data from
	dependency to suggest of poppler.

2008-01-17  Luca Ferretti  <elle.uca@libero.it>
	
	* modulesets/gnome-2.22.modules: Removed libdaemon-newer and
	avahi-newer, no longer needed 'cause official external deps was bumped.
	Make libepc depends on plain "avahi" module.
	* modulesets/gnome-suites-2.22.modules: Added libepc to totem module
	as suggests.

2008-01-16  Elijah Newren  <newren gmail com>

	* modulesets/gnome-external-deps-2.22.modules:
	Update avahi and libdaemon; see thread at