@@ -1,5 +1,10 @@
 2008-01-18  Frederic Peters  <fpeters@0d.be>
 
+	* tests/tests.py: started unit tests, with unit tests covering build
+	ordering.
+
+2008-01-18  Frederic Peters  <fpeters@0d.be>
+
 	* jhbuild/moduleset.py: fixed skip option, broken by new build
 	ordering method.
 
